# numeriq-agent

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/agents/: __init__.py  factual_agent.py  judge_agent.py  subjective_agent.py
src/app/: __init__.py  config.py  main.py  runner.py  schemas.py  telemetry.py
src/app/utils/: time_windows.py
src/pipelines/: __init__.py  backtest.py  orchestrator.py
src/services/: __init__.py  execution.py  feature_store.py  market_data.py  news_data.py  risk.py  sentiment.py
src/tests/: __init__.py  test_api.py  test_factual.py  test_judge.py  test_risk.py  test_subjective.py
